--- a/index.html
+++ b/index.html
@@ -9,28 +9,21 @@
 </head>
 <body>
 
-    <form class="w-75 mx-auto">
-        <p class="mt-3">名前</p>
+   <form class="w-75 mx-auto">
+        <p class="mt-3">お子様の生まれたのは何月ですか？</p>
         <div>
             <input class="form-control w-100 mt-1" name="name" placeholder="" required>
         </div>
-        <p class="mt-3">腕立て</p>
+        <p class="mt-3">出生体重を教えてください。</p>
         <div>
             <input class="form-control w-100 mt-1" name="udetate" required>
         </div>
-        <p class="mt-3">腹筋</p>
+        <p class="mt-3">お子様へのメッセージを20文字程度でお書きください。</p>
         <div>
             <input class="form-control w-100 mt-1" name="fukkin" required>
         </div>
-        <p class="mt-3">背筋</p>
-        <div>
-            <input class="form-control w-100 mt-1" name="haikin" required>
-        </div>
-        <p class="mt-3">スクワット</p>
-        <div>
-            <input class="form-control w-100 mt-1" name="sukuwat" required>
-        </div>
-        <input type="submit" class="mt-4 btn btn-primary" value="送信">
+        <p class="mt-3">アンケートは以上です。ありがとうございました！「送信」を押したら、下の「写真はこちらから。」を押してあなたのお気に入りのお子様の写真をアップしてください。</p>
+　　　　　<input type="submit" class="mt-4 btn btn-primary" value="送信">
     </form>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
