--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
 <body>
 
    <form class="w-75 mx-auto">
-        <p class="mt-3">お子様の生まれたのは何月ですか？</p>
+        <p class="mt-3">お子様の性別を教えてください。</p>
         <div>
-            <input class="form-control w-100 mt-1" name="name" placeholder="" required>
+            <input class="form-control w-100 mt-1" name="sex" placeholder="" required>
+        </div>
+        <p class="mt-3">お子様が生まれたのは何月ですか？</p>
+        <div>
+            <input class="form-control w-100 mt-1" name="month" placeholder="" required>
         </div>
         <p class="mt-3">出生体重を教えてください。</p>
         <div>
-            <input class="form-control w-100 mt-1" name="udetate" required>
+            <input class="form-control w-100 mt-1" name="weight" required>
         </div>
         <p class="mt-3">お子様へのメッセージを20文字程度でお書きください。</p>
         <div>
-            <input class="form-control w-100 mt-1" name="fukkin" required>
+            <input class="form-control w-100 mt-1" name="message" required>
         </div>
-        <p class="mt-3">アンケートは以上です。ありがとうございました！「送信」を押したら、下の「写真はこちらから。」を押してあなたのお気に入りのお子様の写真をアップしてください。</p>
+        <p class="mt-3">アンケートは以上です。下の青い「送信」ボタンを押した後、あなたのお気に入りのお子様の写真1枚をふだんのLINEを使うときと同じ方法で送ってください。</p>
 　　　　　<input type="submit" class="mt-4 btn btn-primary" value="送信">
     </form>
 
@@ -65,11 +69,11 @@
         $(function () {
             $('form').submit(function () {
                 const name    = $('input[name="name"]').val();
-                const udetate = $('input[name="udetate"]').val();
-                const fukkin  = $('input[name="fukkin"]').val();
-                const haikin  = $('input[name="haikin"]').val();
-                const sukuwat = $('input[name="sukuwat"]').val();
-                const msg = `${name}\n${udetate}\n${fukkin}\n${haikin}\n${sukuwat}`;
+                const sex = $('input[name="sex"]').val();
+                const month  = $('input[name="month"]').val();
+                const weight  = $('input[name="weight"]').val();
+                const message = $('input[name="message"]').val();
+                const msg = `${name}\n${sex}\n${month}\n${weight}\n${message}`;
                 sendText(msg);
                 return false;
             });
