--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>近大ベイビーフォトプロジェクト</title>
+    <title>ベイビーフォトプロジェクト</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
@@ -10,6 +10,10 @@
 <body>
 
    <form class="w-75 mx-auto">
+        <p class="mt-3">なりすましによる入力を防ぐためにあなたの氏名をご記入ください（SNSにあなたの氏名をアップすることは絶対にありません）。</p>
+        <div>
+            <input class="form-control w-100 mt-1" name="sex" placeholder="" required>
+        </div>
         <p class="mt-3">お子様の性別を教えてください。</p>
         <div>
             <input class="form-control w-100 mt-1" name="sex" placeholder="" required>
@@ -26,7 +30,7 @@
         <div>
             <input class="form-control w-100 mt-1" name="message" required>
         </div>
-        <p class="mt-3">アンケートは以上です。下の青い「送信」ボタンを押した後、あなたのお気に入りのお子様の写真1枚をふだんのLINEを使うときと同じ方法で送ってください。</p>
+        <p class="mt-3">入力は以上です。ご協力ありがとうございました。Instagramをフォローして、お子様の写真とメッセージアップされるのを楽しみにお待ちください！/p>
 　　　　　<input type="submit" class="mt-4 btn btn-primary" value="送信">
     </form>
 
