--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div>
             <input class="form-control w-100 mt-1" name="message" required>
         </div>
-        <p class="mt-3">入力は以上です。ご協力ありがとうございました。Instagramをフォローして、お子様の写真とメッセージアップされるのを楽しみにお待ちください！/p>
+        <p class="mt-3">入力は以上です。ご協力ありがとうございました。Instagramをフォローして、お子様の写真とメッセージアップされるのを楽しみにお待ちください！</p>
 　　　　　<input type="submit" class="mt-4 btn btn-primary" value="送信">
     </form>
 
