--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>近大ベイビーフォトプロジェクト</title>
+    <title>筋トレ管理</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
@@ -12,26 +12,26 @@
     <form class="w-75 mx-auto">
         <p class="mt-3">なりすましによる入力を防ぐために、あなたの氏名をご記入ください（SNSにあなたの氏名をアップすることは絶対にありません）。</p>
         <div>
-            <input class="form-control w-100 mt-1" name="sex" placeholder="" required>
+            <input class="form-control w-100 mt-1" name="name" placeholder="" required>
         </div>
         <p class="mt-3">お子様の性別を教えてください。</p>
         <div>
-            <input class="form-control w-100 mt-1" name="sex" placeholder="" required>
+            <input class="form-control w-100 mt-1" name="udetate" required>
         </div>
         <p class="mt-3">お子様が生まれたのは何月ですか？</p>
         <div>
-            <input class="form-control w-100 mt-1" name="month" placeholder="" required>
+            <input class="form-control w-100 mt-1" name="fukkin" required>
         </div>
         <p class="mt-3">出生体重を教えてください。</p>
         <div>
-            <input class="form-control w-100 mt-1" name="weight" required>
+            <input class="form-control w-100 mt-1" name="haikin" required>
         </div>
         <p class="mt-3">お子様へのメッセージを20文字程度でお書きください。</p>
         <div>
-            <input class="form-control w-100 mt-1" name="message" required>
+            <input class="form-control w-100 mt-1" name="sukuwat" required>
         </div>
-        <p class="mt-3">入力は以上です。ご協力ありがとうございました。Instagramをフォローして、お子様の写真とメッセージアップされるのを楽しみにお待ちください！</p>
-　　　　　<input type="submit" class="mt-4 btn btn-primary" value="送信">
+        <p class="mt-3">入力は以上です。ご協力ありがとうございました。下の青い送信ボタンを押したらInstagramをフォローして、お子様の写真とメッセージアップされるのを楽しみにお待ちください！</p>
+        <input type="submit" class="mt-4 btn btn-primary" value="送信">
     </form>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
